--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
+
+<strong>Source code</strong> for the melody harmonization method based on PCFG: <a href="PCFGMelodyHarmonizer_v191217.zip">PCFGMelodyHarmonizer_v191217.zip (2.6MB)</a>
+<br>
+The version with semi-supervised learning with HMM-based initialization (the number of distinct nonterminals is 17). 
+Please read README.txt included in the package for usage.
+
         <h3>1. Melody harmonization examples</h3>
 
 The meaning of the labels in each figure are as follows (similar to Fig. 10 in the main manuscript).<br><br>
