--- a/index.html
+++ b/index.html
@@ -58,63 +58,184 @@ The meaning of the labels in each figure are as follows (similar to Fig. 10 in t
 
 1.1<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/0_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/0_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/0_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/0_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/0_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/0_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
+
 
 1.2<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/1_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/1_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/1_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/1_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/1_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/1_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.3<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/5_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/5_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/5_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/5_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/5_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/5_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.4<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/16_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/16_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/16_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/16_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/16_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/16_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.5<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/17_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/17_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/17_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/17_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/17_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/17_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.6<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/20_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/20_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/20_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/20_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/20_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/20_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.7<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/27_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/27_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/27_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/27_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/27_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/27_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.8<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/33_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/33_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/33_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/33_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/33_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/33_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.9<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/35_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/35_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/35_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/35_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/35_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/35_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.10<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/36_all.png" height="150px" alt=""><br>
+Melisma <a href="./audio/Melisma/36_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/36_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/36_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/36_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/36_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.11<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/46_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/46_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/46_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/46_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/46_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/46_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.12<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/50_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/50_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/50_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/50_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/50_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/50_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.13<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/71_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/71_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/71_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/71_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/71_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/71_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.14<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/90_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/90_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/90_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/90_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/90_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/90_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.15<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/95_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/95_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/95_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/95_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/95_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/95_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.16<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/105_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/105_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/105_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/105_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/105_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/105_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.17<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/132_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/132_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/132_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/132_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/132_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/132_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.18<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/145_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/145_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/145_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/145_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/145_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/145_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.19<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/170_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/170_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/170_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/170_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/170_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/170_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 1.20<br>
 <img style="margin: 0px 0px 0px 0px; position:relative; top:0px;" src="image/173_all.png" width="700px" alt=""><br>
+Melisma <a href="./audio/Melisma/173_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+HMM <a href="./audio/HMM/173_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-US <a href="./audio/US-PCFG/173_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+PCFG-SS-HMM <a href="./audio/SS-HMM-PCFG/173_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>　　
+GT <a href="./audio/GT/173_qpr.mp3" target="_blank"><img style="margin: 0px 0px 0px 0px;" src="./image/Sound.png" width="25px" alt=""></a>
+<br><br>
 
 
 
